#+STARTUP: align fold nodlcheck hidestars oddeven lognotestate
#+TITLE: ORG-INFO.JS: Changes
#+AUTHOR: Sebastian Rose
#+EMAIL:
#+LANGUAGE: en
#+INFOJS_OPT: path:org-info.js
#+INFOJS_OPT: toc:nil localtoc:t view:info mouse:underline
#+INFOJS_OPT: up:http://orgmode.org/worg/
#+INFOJS_OPT: home:http://orgmode.org buttons:nil



* 2010-04-24 --- Valid CSS2 IDs

  * Changed =org_html_manager::SID_REGEX= to match valid CSS-IDs. Dots are not
    valid in IDs as of CSS 2 (see http://www.w3.org/TR/CSS2/grammar.html). The
    regexp still supports the `old' style IDs we used to be backward
    compatible.

  * =SECNUM_REGEX= was not in use. Removed.

* 2010-02-14 --- Title and #sec-1 in plain view, TOC anywhere

  * Some corrections of indentation and obsolet comments.

  * Show the title in plain view mode, if showing the first section.

  * Make the initial scan work, even if the table of contents is somewhere else,
    but on top of the page. Honor the =[TABLE-OF-CONTENTS]= setting in Org-mode
    files this way.

  * Fix for different behaviour of Opera-10 when requesting a page with `#sec-1'
    jump target (any jump target for a tall section actually). Pressing the
    reload button caused Opera-10 to scroll the view to the sections heading in
    info view mode.

* 2010-01-11

  * Chao Lu was right. The current behaviour of VIEW=content is not what the
    documentation promises. This is now fixed, finally.

    To open a section in `...html?VIEW=content' or `...html?VIEW=overview', one
    has to explicitly request a section like this:

     `http://orgmode.org/worg/code/org-info-js/index.html?VIEW=content#sec-1'

  * Tags where not removed from local TOCs (sections with subsections).  Fix
    Regexp and use the right one.

  * When loading a page with the `?VIEW=...' query parameters, navigating
    changed the view mode to one hard coded in the <head> section of the
    document, in case it were different. This is now fixed.

* 2010-02-11
