@@ -10,6 +10,12 @@
 
 
 
+* 2010-09-01 --- t.TITLE
+
+  Make sure the correct heading is used as the =org-html-manager.TITLE= property.
+
+  Thanks to tgbit on http://github.com/tgbit for the hint.
+
 * 2010-04-24 --- Valid CSS2 IDs
 
   * Changed =org_html_manager::SID_REGEX= to match valid CSS-IDs. Dots are not
